Большое обновление регистрации и oauth Что я написал: - oauth для всех провайдеров - добавление oauth к существуещему аккаунту - удаление oauth от аккаунта - верификация эмейла (как бестпрактис относится и к oauth) - наплодил миллион сессий и к ним клинеры - метрики ко всему
